--- a/provision.yml
+++ b/provision.yml
@@ -4,7 +4,9 @@
 
 - hosts: s3_admin
   vars:
-    admin_endpoint: https://s3-admin.demo1.cloudian.eu:19443
+    # set s3-admin endpoint first
+    # and adjust inventory/topology
+    admin_endpoint: https://s3-admin.example.com:19443
     admin_username: sysadmin
     admin_password: public
     cmc_groups:
@@ -12,11 +14,11 @@
       - groupB
     cmc_users:
       user1:
-        - group: group1
+        - group: groupA
         - cmc_pass: public
         - bucket: bucket1
       user2:
-        - group: group1
+        - group: groupB
         - cmc_pass: public
         - bucket: bucket2
     policies:
