Adding creation of Storage Policy

--- a/group_vars/s3_admin.yml
+++ b/group_vars/s3_admin.yml
@@ -2,7 +2,6 @@
 
 ansible_user: root
 ansible_ssh_pass: password
-# set s3-admin details either in playbooks, or define here:
-admin_endpoint: https://s3-admin.example.com:19443
+admin_endpoint: https://localhost:19443
 admin_username: sysadmin
 admin_password: public
