--- a/provision-policy.yml
+++ b/provision-policy.yml
@@ -2,16 +2,16 @@
 
 # Playbook - Storage Policy
 
-- hosts: s3_admin
+- hosts: cloudian
   vars:
-    # s3-admin details are defined in group_vars/s3_admin.yml
-    # alternatively, override those here:
-    # admin_username: sysadmin
-    # admin_password: public
+    # s3 and s3-admin details are defined
+    # in group_vars/cloudian.yml
     cluster:
       region: eu-1
+
     storage_policies:
       rf_3:
         default: True
+
   roles:
     - policy
