--- a/group_vars/cloudian.yml
+++ b/group_vars/cloudian.yml
@@ -2,4 +2,8 @@
 
 ansible_user: root
 ansible_ssh_pass: password
+s3_endpoint: https://s3-eu-1.demo4.cloudian.eu
+admin_endpoint: https://localhost:19443
+admin_username: sysadmin
+admin_password: public
 hyperstore_installer_node: "{{ ansible_play_hosts | intersect(groups['installer-node']) | first }}"
